<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#ffdfeaf1"
        android:id="@+id/scrollView" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:weightSum="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/my_nanodegree_apps"
                android:id="@+id/titleView"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <Button
                style="@style/ButtonOrange"
                android:text="@string/spotify_streamer"
                android:id="@+id/spotifyStreamerButton"
                android:layout_marginTop="30dp"
                android:onClick="OnClickButton"
                />

            <Button
                style="@style/ButtonOrange"
                android:text="@string/score_app"
                android:id="@+id/scoreAppButton"
                android:layout_marginTop="10dp"
                android:onClick="OnClickButton"
                />
            <Button
                style="@style/ButtonOrange"
                android:text="@string/library_app"
                android:id="@+id/libraryAppBtn"
                android:layout_marginTop="10dp"
                android:onClick="OnClickButton"
                />
            <Button
                style="@style/ButtonOrange"
                android:text="@string/build_it_bigger"
                android:id="@+id/buildItBiggerButton"
                android:layout_marginTop="10dp"
                android:onClick="OnClickButton"
                />

            <Button
                style="@style/ButtonOrange"
                android:text="@string/xyz_reader"
                android:id="@+id/xyzReaderButton"
                android:layout_marginTop="10dp"
                android:onClick="OnClickButton"
                />

            <Button
                style="@style/ButtonOrange"
                android:text="@string/android_wear_watch"
                android:id="@+id/androidWearWatchButton"
                android:layout_marginTop="10dp"
                android:onClick="OnClickButton"
                />

            <Button
                style="@style/ButtonRed"
                android:text="@string/capstone_my_own_app"
                android:id="@+id/capstoneButton"
                android:layout_marginTop="10dp"
                android:onClick="OnClickButton"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
